Analisis_LexSyn/parser.out
Created by PLY version 3.6 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> ciclo_clase clase_main
Rule 2     programa -> clase_main
Rule 3     ciclo_clase -> clase
Rule 4     ciclo_clase -> ciclo_clase clase
Rule 5     clase -> CLASS ID declararClase herencia LLIZQ ciclo_vars ciclo_func LLDER limpiarMetodoActual
Rule 6     clase -> CLASS ID declararClase herencia LLIZQ ciclo_vars LLDER limpiarMetodoActual
Rule 7     clase -> CLASS ID declararClase herencia LLIZQ ciclo_func LLDER limpiarMetodoActual
Rule 8     clase -> CLASS ID declararClase herencia LLIZQ LLDER limpiarMetodoActual
Rule 9     declararClase -> <empty>
Rule 10    limpiarMetodoActual -> <empty>
Rule 11    limpiarInvocador -> <empty>
Rule 12    herencia -> empty
Rule 13    herencia -> UNDER ID agregaAncestro
Rule 14    agregaAncestro -> <empty>
Rule 15    ciclo_vars -> acceso vars
Rule 16    ciclo_vars -> ciclo_vars acceso vars
Rule 17    ciclo_func -> func
Rule 18    ciclo_func -> ciclo_func func
Rule 19    clase_main -> CLASS MAIN declararClase LLIZQ ciclo_vars ciclo_func main LLDER
Rule 20    clase_main -> CLASS MAIN declararClase LLIZQ ciclo_vars main LLDER
Rule 21    clase_main -> CLASS MAIN declararClase LLIZQ ciclo_func main LLDER
Rule 22    clase_main -> CLASS MAIN declararClase LLIZQ main LLDER
Rule 23    vars -> var_op PYC
Rule 24    var_op -> tipo ciclo_tipo
Rule 25    var_op -> ID revisarExistenciaClase DOSP ciclo_id
Rule 26    revisarExistenciaClase -> <empty>
Rule 27    ciclo_tipo -> ID declararVariable
Rule 28    ciclo_tipo -> ID COIZQ cte_numeral CODER declararVariableDim
Rule 29    ciclo_tipo -> ciclo_tipo COMA ID declararVariable
Rule 30    ciclo_tipo -> ciclo_tipo COMA ID COIZQ cte_numeral CODER declararVariableDim
Rule 31    ciclo_id -> ID declararVariable
Rule 32    ciclo_id -> ciclo_id COMA ID declararVariable
Rule 33    declararVariableDim -> <empty>
Rule 34    declararVariable -> <empty>
Rule 35    tipo -> NUMERAL
Rule 36    tipo -> REAL
Rule 37    tipo -> BOOL
Rule 38    tipo -> CHAR
Rule 39    tipo -> STRING
Rule 40    acceso -> HIDDEN
Rule 41    acceso -> VISIBLE
Rule 42    func -> acceso tipo ID declararMetodo params cuerpo_func
Rule 43    func -> acceso WITHOUT ID declararMetodo params cuerpo_func
Rule 44    declararMetodo -> <empty>
Rule 45    main -> acceso WITHOUT MAIN rellenaCuadInicial declararMetodo PIZQ PDER cuerpo_func
Rule 46    rellenaCuadInicial -> <empty>
Rule 47    params -> PIZQ params_ciclo PDER
Rule 48    params -> PIZQ PDER
Rule 49    params_ciclo -> tipo ID meterParametros
Rule 50    params_ciclo -> tipo ID COIZQ cte_numeral CODER meterParametrosDim
Rule 51    params_ciclo -> params_ciclo COMA tipo ID meterParametros
Rule 52    params_ciclo -> params_ciclo COMA tipo ID COIZQ cte_numeral CODER meterParametrosDim
Rule 53    meterParametrosDim -> <empty>
Rule 54    meterParametros -> <empty>
Rule 55    tamMetodo -> <empty>
Rule 56    cuerpo_func -> inicioFunc LLIZQ ciclo_vars_func ciclo_estatuto LLDER tamMetodo
Rule 57    cuerpo_func -> inicioFunc LLIZQ ciclo_vars_func LLDER tamMetodo
Rule 58    cuerpo_func -> inicioFunc LLIZQ ciclo_estatuto LLDER tamMetodo
Rule 59    cuerpo_func -> inicioFunc LLIZQ LLDER tamMetodo
Rule 60    inicioFunc -> <empty>
Rule 61    ciclo_vars_func -> vars
Rule 62    ciclo_vars_func -> ciclo_vars_func vars
Rule 63    ciclo_estatuto -> estatuto
Rule 64    ciclo_estatuto -> ciclo_estatuto estatuto
Rule 65    estatuto -> while
Rule 66    estatuto -> asignacion
Rule 67    estatuto -> condicion
Rule 68    estatuto -> escritura
Rule 69    estatuto -> lectura
Rule 70    estatuto -> llamada_func limpiarInvocador PYC
Rule 71    estatuto -> return
Rule 72    llamada_func -> ID PUNTO definirInvocador ID checarFuncion generaEra PIZQ limpiarInvocador exp_ciclo PDER generarGosub
Rule 73    llamada_func -> ID PUNTO definirInvocador ID checarFuncion generaEra PIZQ limpiarInvocador PDER generarGosub
Rule 74    llamada_func -> ID checarFuncion generaEra PIZQ limpiarInvocador exp_ciclo PDER generarGosub
Rule 75    llamada_func -> ID checarFuncion generaEra PIZQ limpiarInvocador PDER generarGosub
Rule 76    generarGosub -> <empty>
Rule 77    generaEra -> <empty>
Rule 78    checarFuncion -> <empty>
Rule 79    definirInvocador -> <empty>
Rule 80    exp_ciclo -> exp
Rule 81    exp_ciclo -> exp_ciclo COMA exp
Rule 82    exp -> exp MAS exp
Rule 83    exp -> exp MENOS exp
Rule 84    exp -> exp POR exp
Rule 85    exp -> exp ENTRE exp
Rule 86    exp -> exp MOD exp
Rule 87    exp -> exp IGUALC exp
Rule 88    exp -> exp NOTIGUAL exp
Rule 89    exp -> exp MAYOR exp
Rule 90    exp -> exp MAYORIGUAL exp
Rule 91    exp -> exp MENOR exp
Rule 92    exp -> exp MENORIGUAL exp
Rule 93    exp -> exp AND exp
Rule 94    exp -> exp OR exp
Rule 95    exp -> NOT exp
Rule 96    exp -> MENOS exp
Rule 97    exp -> PIZQ exp PDER
Rule 98    exp -> cte_str
Rule 99    exp -> cte_char
Rule 100   exp -> cte_numeral
Rule 101   exp -> cte_real
Rule 102   exp -> cte_bool
Rule 103   exp -> atom limpiarInvocador
Rule 104   exp -> llamada_func limpiarInvocador
Rule 105   cte_str -> CTE_STR
Rule 106   cte_char -> CTE_CHAR
Rule 107   cte_numeral -> CTE_NUMERAL
Rule 108   cte_real -> CTE_REAL
Rule 109   cte_bool -> TRUE
Rule 110   cte_bool -> FALSE
Rule 111   return -> RETURN exp PYC
Rule 112   return -> RETURN PYC
Rule 113   while -> WHILE while_1 PIZQ exp PDER while_2 LLIZQ ciclo_estatuto while_3 LLDER
Rule 114   while -> WHILE while_1 PIZQ exp PDER while_2 LLIZQ while_3 LLDER
Rule 115   while_1 -> <empty>
Rule 116   while_2 -> <empty>
Rule 117   while_3 -> <empty>
Rule 118   asignacion -> atom limpiarInvocador IGUAL exp PYC
Rule 119   atom -> ID PUNTO definirInvocador ID checarAtributoDim COIZQ exp CODER
Rule 120   atom -> ID checarAtributoDim COIZQ exp CODER
Rule 121   atom -> THIS PUNTO definirInvocador ID checarAtributoDim COIZQ exp CODER
Rule 122   atom -> ID PUNTO definirInvocador ID checarAtributo
Rule 123   atom -> ID checarAtributo
Rule 124   atom -> THIS PUNTO definirInvocador ID checarAtributo
Rule 125   checarAtributoDim -> <empty>
Rule 126   checarAtributo -> <empty>
Rule 127   condicion -> ciclo_cond ELSE if_3 LLIZQ ciclo_estatuto LLDER if_4
Rule 128   condicion -> ciclo_cond ELSE if_3 LLIZQ LLDER if_4
Rule 129   condicion -> ciclo_cond if_4
Rule 130   ciclo_cond -> IF PIZQ exp PDER if_1 LLIZQ ciclo_estatuto if_2 LLDER
Rule 131   ciclo_cond -> IF PIZQ exp PDER if_1 LLIZQ if_2 LLDER
Rule 132   ciclo_cond -> ciclo_cond ELSE IF if_3 PIZQ exp PDER if_1 LLIZQ ciclo_estatuto if_2 LLDER
Rule 133   ciclo_cond -> ciclo_cond ELSE IF if_3 PIZQ exp PDER if_1 LLIZQ if_2 LLDER
Rule 134   if_1 -> <empty>
Rule 135   if_2 -> <empty>
Rule 136   if_3 -> <empty>
Rule 137   if_4 -> <empty>
Rule 138   lectura -> INPUT PIZQ atom limpiarInvocador PDER PYC
Rule 139   escritura -> OUTPUT PIZQ exp PDER PYC
Rule 140   empty -> <empty>

Terminals, with rules where they appear

AND                  : 93
BOOL                 : 37
CHAR                 : 38
CLASS                : 5 6 7 8 19 20 21 22
CODER                : 28 30 50 52 119 120 121
COIZQ                : 28 30 50 52 119 120 121
COMA                 : 29 30 32 51 52 81
CTE_CHAR             : 106
CTE_NUMERAL          : 107
CTE_REAL             : 108
CTE_STR              : 105
DOSP                 : 25
ELSE                 : 127 128 132 133
ENTRE                : 85
FALSE                : 110
HIDDEN               : 40
ID                   : 5 6 7 8 13 25 27 28 29 30 31 32 42 43 49 50 51 52 72 72 73 73 74 75 119 119 120 121 122 122 123 124
IF                   : 130 131 132 133
IGUAL                : 118
IGUALC               : 87
INPUT                : 138
LLDER                : 5 6 7 8 19 20 21 22 56 57 58 59 113 114 127 128 130 131 132 133
LLIZQ                : 5 6 7 8 19 20 21 22 56 57 58 59 113 114 127 128 130 131 132 133
MAIN                 : 19 20 21 22 45
MAS                  : 82
MAYOR                : 89
MAYORIGUAL           : 90
MENOR                : 91
MENORIGUAL           : 92
MENOS                : 83 96
MOD                  : 86
NOT                  : 95
NOTIGUAL             : 88
NUMERAL              : 35
OR                   : 94
OUTPUT               : 139
PDER                 : 45 47 48 72 73 74 75 97 113 114 130 131 132 133 138 139
PIZQ                 : 45 47 48 72 73 74 75 97 113 114 130 131 132 133 138 139
POR                  : 84
PUNTO                : 72 73 119 121 122 124
PYC                  : 23 70 111 112 118 138 139
REAL                 : 36
RETURN               : 111 112
STRING               : 39
THIS                 : 121 124
TRUE                 : 109
UNDER                : 13
VISIBLE              : 41
WHILE                : 113 114
WITHOUT              : 43 45
error                : 

Nonterminals, with rules where they appear

acceso               : 15 16 42 43 45
agregaAncestro       : 13
asignacion           : 66
atom                 : 103 118 138
checarAtributo       : 122 123 124
checarAtributoDim    : 119 120 121
checarFuncion        : 72 73 74 75
ciclo_clase          : 1 4
ciclo_cond           : 127 128 129 132 133
ciclo_estatuto       : 56 58 64 113 127 130 132
ciclo_func           : 5 7 18 19 21
ciclo_id             : 25 32
ciclo_tipo           : 24 29 30
ciclo_vars           : 5 6 16 19 20
ciclo_vars_func      : 56 57 62
clase                : 3 4
clase_main           : 1 2
condicion            : 67
cte_bool             : 102
cte_char             : 99
cte_numeral          : 28 30 50 52 100
cte_real             : 101
cte_str              : 98
cuerpo_func          : 42 43 45
declararClase        : 5 6 7 8 19 20 21 22
declararMetodo       : 42 43 45
declararVariable     : 27 29 31 32
declararVariableDim  : 28 30
definirInvocador     : 72 73 119 121 122 124
empty                : 12
escritura            : 68
estatuto             : 63 64
exp                  : 80 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 93 94 94 95 96 97 111 113 114 118 119 120 121 130 131 132 133 139
exp_ciclo            : 72 74 81
func                 : 17 18
generaEra            : 72 73 74 75
generarGosub         : 72 73 74 75
herencia             : 5 6 7 8
if_1                 : 130 131 132 133
if_2                 : 130 131 132 133
if_3                 : 127 128 132 133
if_4                 : 127 128 129
inicioFunc           : 56 57 58 59
lectura              : 69
limpiarInvocador     : 70 72 73 74 75 103 104 118 138
limpiarMetodoActual  : 5 6 7 8
llamada_func         : 70 104
main                 : 19 20 21 22
meterParametros      : 49 51
meterParametrosDim   : 50 52
params               : 42 43
params_ciclo         : 47 51 52
programa             : 0
rellenaCuadInicial   : 45
return               : 71
revisarExistenciaClase : 25
tamMetodo            : 56 57 58 59
tipo                 : 24 42 49 50 51 52
var_op               : 23
vars                 : 15 16 61 62
while                : 65
while_1              : 113 114
while_2              : 113 114
while_3              : 113 114

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . ciclo_clase clase_main
    (2) programa -> . clase_main
    (3) ciclo_clase -> . clase
    (4) ciclo_clase -> . ciclo_clase clase
    (19) clase_main -> . CLASS MAIN declararClase LLIZQ ciclo_vars ciclo_func main LLDER
    (20) clase_main -> . CLASS MAIN declararClase LLIZQ ciclo_vars main LLDER
    (21) clase_main -> . CLASS MAIN declararClase LLIZQ ciclo_func main LLDER
    (22) clase_main -> . CLASS MAIN declararClase LLIZQ main LLDER
    (5) clase -> . CLASS ID declararClase herencia LLIZQ ciclo_vars ciclo_func LLDER limpiarMetodoActual
    (6) clase -> . CLASS ID declararClase herencia LLIZQ ciclo_vars LLDER limpiarMetodoActual
    (7) clase -> . CLASS ID declararClase herencia LLIZQ ciclo_func LLDER limpiarMetodoActual
    (8) clase -> . CLASS ID declararClase herencia LLIZQ LLDER limpiarMetodoActual

    CLASS           shift and go to state 5

    ciclo_clase                    shift and go to state 1
    clase_main                     shift and go to state 2
    clase                          shift and go to state 3
    programa                       shift and go to state 4

state 1

    (1) programa -> ciclo_clase . clase_main
    (4) ciclo_clase -> ciclo_clase . clase
    (19) clase_main -> . CLASS MAIN declararClase LLIZQ ciclo_vars ciclo_func main LLDER
    (20) clase_main -> . CLASS MAIN declararClase LLIZQ ciclo_vars main LLDER
    (21) clase_main -> . CLASS MAIN declararClase LLIZQ ciclo_func main LLDER
    (22) clase_main -> . CLASS MAIN declararClase LLIZQ main LLDER
    (5) clase -> . CLASS ID declararClase herencia LLIZQ ciclo_vars ciclo_func LLDER limpiarMetodoActual
    (6) clase -> . CLASS ID declararClase herencia LLIZQ ciclo_vars LLDER limpiarMetodoActual
    (7) clase -> . CLASS ID declararClase herencia LLIZQ ciclo_func LLDER limpiarMetodoActual
    (8) clase -> . CLASS ID declararClase herencia LLIZQ LLDER limpiarMetodoActual

    CLASS           shift and go to state 5

    clase_main                     shift and go to state 6
    clase                          shift and go to state 7

state 2

    (2) programa -> clase_main .

    $end            reduce using rule 2 (programa -> clase_main .)


state 3

    (3) ciclo_clase -> clase .

    CLASS           reduce using rule 3 (ciclo_clase -> clase .)


state 4

    (0) S' -> programa .



state 5

    (19) clase_main -> CLASS . MAIN declararClase LLIZQ ciclo_vars ciclo_func main LLDER
    (20) clase_main -> CLASS . MAIN declararClase LLIZQ ciclo_vars main LLDER
    (21) clase_main -> CLASS . MAIN declararClase LLIZQ ciclo_func main LLDER
    (22) clase_main -> CLASS . MAIN declararClase LLIZQ main LLDER
    (5) clase -> CLASS . ID declararClase herencia LLIZQ ciclo_vars ciclo_func LLDER limpiarMetodoActual
    (6) clase -> CLASS . ID declararClase herencia LLIZQ ciclo_vars LLDER limpiarMetodoActual
    (7) clase -> CLASS . ID declararClase herencia LLIZQ ciclo_func LLDER limpiarMetodoActual
    (8) clase -> CLASS . ID declararClase herencia LLIZQ LLDER limpiarMetodoActual

    MAIN            shift and go to state 8
    ID              shift and go to state 9


state 6

    (1) programa -> ciclo_clase clase_main .

    $end            reduce using rule 1 (programa -> ciclo_clase clase_main .)


state 7

    (4) ciclo_clase -> ciclo_clase clase .

    CLASS           reduce using rule 4 (ciclo_clase -> ciclo_clase clase .)


state 8

    (19) clase_main -> CLASS MAIN . declararClase LLIZQ ciclo_vars ciclo_func main LLDER
    (20) clase_main -> CLASS MAIN . declararClase LLIZQ ciclo_vars main LLDER
    (21) clase_main -> CLASS MAIN . declararClase LLIZQ ciclo_func main LLDER
    (22) clase_main -> CLASS MAIN . declararClase LLIZQ main LLDER
    (9) declararClase -> .

    LLIZQ           reduce using rule 9 (declararClase -> .)

    declararClase                  shift and go to state 10

state 9

    (5) clase -> CLASS ID . declararClase herencia LLIZQ ciclo_vars ciclo_func LLDER limpiarMetodoActual
    (6) clase -> CLASS ID . declararClase herencia LLIZQ ciclo_vars LLDER limpiarMetodoActual
    (7) clase -> CLASS ID . declararClase herencia LLIZQ ciclo_func LLDER limpiarMetodoActual
    (8) clase -> CLASS ID . declararClase herencia LLIZQ LLDER limpiarMetodoActual
    (9) declararClase -> .

    UNDER           reduce using rule 9 (declararClase -> .)
    LLIZQ           reduce using rule 9 (declararClase -> .)

    declararClase                  shift and go to state 11

state 10

    (19) clase_main -> CLASS MAIN declararClase . LLIZQ ciclo_vars ciclo_func main LLDER
    (20) clase_main -> CLASS MAIN declararClase . LLIZQ ciclo_vars main LLDER
    (21) clase_main -> CLASS MAIN declararClase . LLIZQ ciclo_func main LLDER
    (22) clase_main -> CLASS MAIN declararClase . LLIZQ main LLDER

    LLIZQ           shift and go to state 12


state 11

    (5) clase -> CLASS ID declararClase . herencia LLIZQ ciclo_vars ciclo_func LLDER limpiarMetodoActual
    (6) clase -> CLASS ID declararClase . herencia LLIZQ ciclo_vars LLDER limpiarMetodoActual
    (7) clase -> CLASS ID declararClase . herencia LLIZQ ciclo_func LLDER limpiarMetodoActual
    (8) clase -> CLASS ID declararClase . herencia LLIZQ LLDER limpiarMetodoActual
    (12) herencia -> . empty
    (13) herencia -> . UNDER ID agregaAncestro
    (140) empty -> .

    UNDER           shift and go to state 13
    LLIZQ           reduce using rule 140 (empty -> .)

    herencia                       shift and go to state 14
    empty                          shift and go to state 15

state 12

    (19) clase_main -> CLASS MAIN declararClase LLIZQ . ciclo_vars ciclo_func main LLDER
    (20) clase_main -> CLASS MAIN declararClase LLIZQ . ciclo_vars main LLDER
    (21) clase_main -> CLASS MAIN declararClase LLIZQ . ciclo_func main LLDER
    (22) clase_main -> CLASS MAIN declararClase LLIZQ . main LLDER
    (15) ciclo_vars -> . acceso vars
    (16) ciclo_vars -> . ciclo_vars acceso vars
    (17) ciclo_func -> . func
    (18) ciclo_func -> . ciclo_func func
    (45) main -> . acceso WITHOUT MAIN rellenaCuadInicial declararMetodo PIZQ PDER cuerpo_func
    (40) acceso -> . HIDDEN
    (41) acceso -> . VISIBLE
    (42) func -> . acceso tipo ID declararMetodo params cuerpo_func
    (43) func -> . acceso WITHOUT ID declararMetodo params cuerpo_func

    HIDDEN          shift and go to state 22
    VISIBLE         shift and go to state 19

    acceso                         shift and go to state 17
    ciclo_func                     shift and go to state 18
    ciclo_vars                     shift and go to state 16
    func                           shift and go to state 21
    main                           shift and go to state 20

state 13

    (13) herencia -> UNDER . ID agregaAncestro

    ID              shift and go to state 23


state 14

    (5) clase -> CLASS ID declararClase herencia . LLIZQ ciclo_vars ciclo_func LLDER limpiarMetodoActual
    (6) clase -> CLASS ID declararClase herencia . LLIZQ ciclo_vars LLDER limpiarMetodoActual
    (7) clase -> CLASS ID declararClase herencia . LLIZQ ciclo_func LLDER limpiarMetodoActual
    (8) clase -> CLASS ID declararClase herencia . LLIZQ LLDER limpiarMetodoActual

    LLIZQ           shift and go to state 24


state 15

    (12) herencia -> empty .

    LLIZQ           reduce using rule 12 (herencia -> empty .)


state 16

    (19) clase_main -> CLASS MAIN declararClase LLIZQ ciclo_vars . ciclo_func main LLDER
    (20) clase_main -> CLASS MAIN declararClase LLIZQ ciclo_vars . main LLDER
    (16) ciclo_vars -> ciclo_vars . acceso vars
    (17) ciclo_func -> . func
    (18) ciclo_func -> . ciclo_func func
    (45) main -> . acceso WITHOUT MAIN rellenaCuadInicial declararMetodo PIZQ PDER cuerpo_func
    (40) acceso -> . HIDDEN
    (41) acceso -> . VISIBLE
    (42) func -> . acceso tipo ID declararMetodo params cuerpo_func
    (43) func -> . acceso WITHOUT ID declararMetodo params cuerpo_func

    HIDDEN          shift and go to state 22
    VISIBLE         shift and go to state 19

    acceso                         shift and go to state 25
    ciclo_func                     shift and go to state 26
    func                           shift and go to state 21
    main                           shift and go to state 27

state 17

    (15) ciclo_vars -> acceso . vars
    (45) main -> acceso . WITHOUT MAIN rellenaCuadInicial declararMetodo PIZQ PDER cuerpo_func
    (42) func -> acceso . tipo ID declararMetodo params cuerpo_func
    (43) func -> acceso . WITHOUT ID declararMetodo params cuerpo_func
    (23) vars -> . var_op PYC
    (35) tipo -> . NUMERAL
    (36) tipo -> . REAL
    (37) tipo -> . BOOL
    (38) tipo -> . CHAR
    (39) tipo -> . STRING
    (24) var_op -> . tipo ciclo_tipo
    (25) var_op -> . ID revisarExistenciaClase DOSP ciclo_id

    WITHOUT         shift and go to state 35
    NUMERAL         shift and go to state 31
    REAL            shift and go to state 28
    BOOL            shift and go to state 37
    CHAR            shift and go to state 29
    STRING          shift and go to state 34
    ID              shift and go to state 36

    vars                           shift and go to state 32
    tipo                           shift and go to state 33
    var_op                         shift and go to state 30

state 18

    (21) clase_main -> CLASS MAIN declararClase LLIZQ ciclo_func . main LLDER
    (18) ciclo_func -> ciclo_func . func
    (45) main -> . acceso WITHOUT MAIN rellenaCuadInicial declararMetodo PIZQ PDER cuerpo_func
    (42) func -> . acceso tipo ID declararMetodo params cuerpo_func
    (43) func -> . acceso WITHOUT ID declararMetodo params cuerpo_func
    (40) acceso -> . HIDDEN
    (41) acceso -> . VISIBLE

    HIDDEN          shift and go to state 22
    VISIBLE         shift and go to state 19

    acceso                         shift and go to state 38
    func                           shift and go to state 39
    main                           shift and go to state 40

state 19

    (41) acceso -> VISIBLE .

    WITHOUT         reduce using rule 41 (acceso -> VISIBLE .)
    NUMERAL         reduce using rule 41 (acceso -> VISIBLE .)
    REAL            reduce using rule 41 (acceso -> VISIBLE .)
    BOOL            reduce using rule 41 (acceso -> VISIBLE .)
    CHAR            reduce using rule 41 (acceso -> VISIBLE .)
    STRING          reduce using rule 41 (acceso -> VISIBLE .)
    ID              reduce using rule 41 (acceso -> VISIBLE .)


state 20

    (22) clase_main -> CLASS MAIN declararClase LLIZQ main . LLDER

    LLDER           shift and go to state 41


state 21

    (17) ciclo_func -> func .

    LLDER           reduce using rule 17 (ciclo_func -> func .)
    HIDDEN          reduce using rule 17 (ciclo_func -> func .)
    VISIBLE         reduce using rule 17 (ciclo_func -> func .)


state 22

    (40) acceso -> HIDDEN .

    WITHOUT         reduce using rule 40 (acceso -> HIDDEN .)
    NUMERAL         reduce using rule 40 (acceso -> HIDDEN .)
    REAL            reduce using rule 40 (acceso -> HIDDEN .)
    BOOL            reduce using rule 40 (acceso -> HIDDEN .)
    CHAR            reduce using rule 40 (acceso -> HIDDEN .)
    STRING          reduce using rule 40 (acceso -> HIDDEN .)
    ID              reduce using rule 40 (acceso -> HIDDEN .)


state 23

    (13) herencia -> UNDER ID . agregaAncestro
    (14) agregaAncestro -> .

    LLIZQ           reduce using rule 14 (agregaAncestro -> .)

    agregaAncestro                 shift and go to state 42

state 24

    (5) clase -> CLASS ID declararClase herencia LLIZQ . ciclo_vars ciclo_func LLDER limpiarMetodoActual
    (6) clase -> CLASS ID declararClase herencia LLIZQ . ciclo_vars LLDER limpiarMetodoActual
    (7) clase -> CLASS ID declararClase herencia LLIZQ . ciclo_func LLDER limpiarMetodoActual
    (8) clase -> CLASS ID declararClase herencia LLIZQ . LLDER limpiarMetodoActual
    (15) ciclo_vars -> . acceso vars
    (16) ciclo_vars -> . ciclo_vars acceso vars
    (17) ciclo_func -> . func
    (18) ciclo_func -> . ciclo_func func
    (40) acceso -> . HIDDEN
    (41) acceso -> . VISIBLE
    (42) func -> . acceso tipo ID declararMetodo params cuerpo_func
    (43) func -> . acceso WITHOUT ID declararMetodo params cuerpo_func

    LLDER           shift and go to state 43
    HIDDEN          shift and go to state 22
    VISIBLE         shift and go to state 19

    acceso                         shift and go to state 45
    ciclo_func                     shift and go to state 44
    ciclo_vars                     shift and go to state 46
    func                           shift and go to state 21

state 25

    (16) ciclo_vars -> ciclo_vars acceso . vars
    (45) main -> acceso . WITHOUT MAIN rellenaCuadInicial declararMetodo PIZQ PDER cuerpo_func
    (42) func -> acceso . tipo ID declararMetodo params cuerpo_func
    (43) func -> acceso . WITHOUT ID declararMetodo params cuerpo_func
    (23) vars -> . var_op PYC
    (35) tipo -> . NUMERAL
    (36) tipo -> . REAL
    (37) tipo -> . BOOL
    (38) tipo -> . CHAR
    (39) tipo -> . STRING
    (24) var_op -> . tipo ciclo_tipo
    (25) var_op -> . ID revisarExistenciaClase DOSP ciclo_id

    WITHOUT         shift and go to state 35
    NUMERAL         shift and go to state 31
    REAL            shift and go to state 28
    BOOL            shift and go to state 37
    CHAR            shift and go to state 29
    STRING          shift and go to state 34
    ID              shift and go to state 36

    tipo                           shift and go to state 33
    vars                           shift and go to state 47
    var_op                         shift and go to state 30

state 26

    (19) clase_main -> CLASS MAIN declararClase LLIZQ ciclo_vars ciclo_func . main LLDER
    (18) ciclo_func -> ciclo_func . func
    (45) main -> . acceso WITHOUT MAIN rellenaCuadInicial declararMetodo PIZQ PDER cuerpo_func
    (42) func -> . acceso tipo ID declararMetodo params cuerpo_func
    (43) func -> . acceso WITHOUT ID declararMetodo params cuerpo_func
    (40) acceso -> . HIDDEN
    (41) acceso -> . VISIBLE

    HIDDEN          shift and go to state 22
    VISIBLE         shift and go to state 19

    acceso                         shift and go to state 38
    func                           shift and go to state 39
    main                           shift and go to state 48

state 27

    (20) clase_main -> CLASS MAIN declararClase LLIZQ ciclo_vars main . LLDER

    LLDER           shift and go to state 49


state 28

    (36) tipo -> REAL .

    ID              reduce using rule 36 (tipo -> REAL .)


state 29

    (38) tipo -> CHAR .

    ID              reduce using rule 38 (tipo -> CHAR .)


state 30

    (23) vars -> var_op . PYC

    PYC             shift and go to state 50


state 31

    (35) tipo -> NUMERAL .

    ID              reduce using rule 35 (tipo -> NUMERAL .)


state 32

    (15) ciclo_vars -> acceso vars .

    LLDER           reduce using rule 15 (ciclo_vars -> acceso vars .)
    HIDDEN          reduce using rule 15 (ciclo_vars -> acceso vars .)
    VISIBLE         reduce using rule 15 (ciclo_vars -> acceso vars .)


state 33

    (42) func -> acceso tipo . ID declararMetodo params cuerpo_func
    (24) var_op -> tipo . ciclo_tipo
    (27) ciclo_tipo -> . ID declararVariable
    (28) ciclo_tipo -> . ID COIZQ cte_numeral CODER declararVariableDim
    (29) ciclo_tipo -> . ciclo_tipo COMA ID declararVariable
    (30) ciclo_tipo -> . ciclo_tipo COMA ID COIZQ cte_numeral CODER declararVariableDim

    ID              shift and go to state 52

    ciclo_tipo                     shift and go to state 51

state 34

    (39) tipo -> STRING .

    ID              reduce using rule 39 (tipo -> STRING .)


state 35

    (45) main -> acceso WITHOUT . MAIN rellenaCuadInicial declararMetodo PIZQ PDER cuerpo_func
    (43) func -> acceso WITHOUT . ID declararMetodo params cuerpo_func

    MAIN            shift and go to state 54
    ID              shift and go to state 53


state 36

    (25) var_op -> ID . revisarExistenciaClase DOSP ciclo_id
    (26) revisarExistenciaClase -> .

    DOSP            reduce using rule 26 (revisarExistenciaClase -> .)

    revisarExistenciaClase         shift and go to state 55

state 37

    (37) tipo -> BOOL .

    ID              reduce using rule 37 (tipo -> BOOL .)


state 38

    (45) main -> acceso . WITHOUT MAIN rellenaCuadInicial declararMetodo PIZQ PDER cuerpo_func
    (42) func -> acceso . tipo ID declararMetodo params cuerpo_func
    (43) func -> acceso . WITHOUT ID declararMetodo params cuerpo_func
    (35) tipo -> . NUMERAL
    (36) tipo -> . REAL
    (37) tipo -> . BOOL
    (38) tipo -> . CHAR
    (39) tipo -> . STRING

    WITHOUT         shift and go to state 35
    NUMERAL         shift and go to state 31
    REAL            shift and go to state 28
    BOOL            shift and go to state 37
    CHAR            shift and go to state 29
    STRING          shift and go to state 34

    tipo                           shift and go to state 56

state 39

    (18) ciclo_func -> ciclo_func func .

    LLDER           reduce using rule 18 (ciclo_func -> ciclo_func func .)
    HIDDEN          reduce using rule 18 (ciclo_func -> ciclo_func func .)
    VISIBLE         reduce using rule 18 (ciclo_func -> ciclo_func func .)


state 40

    (21) clase_main -> CLASS MAIN declararClase LLIZQ ciclo_func main . LLDER

    LLDER           shift and go to state 57


state 41

    (22) clase_main -> CLASS MAIN declararClase LLIZQ main LLDER .

    $end            reduce using rule 22 (clase_main -> CLASS MAIN declararClase LLIZQ main LLDER .)


state 42

    (13) herencia -> UNDER ID agregaAncestro .

    LLIZQ           reduce using rule 13 (herencia -> UNDER ID agregaAncestro .)


state 43

    (8) clase -> CLASS ID declararClase herencia LLIZQ LLDER . limpiarMetodoActual
    (10) limpiarMetodoActual -> .

    CLASS           reduce using rule 10 (limpiarMetodoActual -> .)

    limpiarMetodoActual            shift and go to state 58

state 44

    (7) clase -> CLASS ID declararClase herencia LLIZQ ciclo_func . LLDER limpiarMetodoActual
    (18) ciclo_func -> ciclo_func . func
    (42) func -> . acceso tipo ID declararMetodo params cuerpo_func
    (43) func -> . acceso WITHOUT ID declararMetodo params cuerpo_func
    (40) acceso -> . HIDDEN
    (41) acceso -> . VISIBLE

    LLDER           shift and go to state 59
    HIDDEN          shift and go to state 22
    VISIBLE         shift and go to state 19

    acceso                         shift and go to state 60
    func                           shift and go to state 39

state 45

    (15) ciclo_vars -> acceso . vars
    (42) func -> acceso . tipo ID declararMetodo params cuerpo_func
    (43) func -> acceso . WITHOUT ID declararMetodo params cuerpo_func
    (23) vars -> . var_op PYC
    (35) tipo -> . NUMERAL
    (36) tipo -> . REAL
    (37) tipo -> . BOOL
    (38) tipo -> . CHAR
    (39) tipo -> . STRING
    (24) var_op -> . tipo ciclo_tipo
    (25) var_op -> . ID revisarExistenciaClase DOSP ciclo_id

    WITHOUT         shift and go to state 61
    NUMERAL         shift and go to state 31
    REAL            shift and go to state 28
    BOOL            shift and go to state 37
    CHAR            shift and go to state 29
    STRING          shift and go to state 34
    ID              shift and go to state 36

    vars                           shift and go to state 32
    tipo                           shift and go to state 33
    var_op                         shift and go to state 30

state 46

    (5) clase -> CLASS ID declararClase herencia LLIZQ ciclo_vars . ciclo_func LLDER limpiarMetodoActual
    (6) clase -> CLASS ID declararClase herencia LLIZQ ciclo_vars . LLDER limpiarMetodoActual
    (16) ciclo_vars -> ciclo_vars . acceso vars
    (17) ciclo_func -> . func
    (18) ciclo_func -> . ciclo_func func
    (40) acceso -> . HIDDEN
    (41) acceso -> . VISIBLE
    (42) func -> . acceso tipo ID declararMetodo params cuerpo_func
    (43) func -> . acceso WITHOUT ID declararMetodo params cuerpo_func

    LLDER           shift and go to state 62
    HIDDEN          shift and go to state 22
    VISIBLE         shift and go to state 19
